eliminating warnings,adding automated mail when an org is registered(method on gui) and adding new color on jtextfield at nursinghome menu as the background is to intensive