@@ -15,53 +15,40 @@ public class RegistrationFormL
 
 
     SpinnerNumberModel numberEmployees = new SpinnerNumberModel(
-            new Integer(1), // value
-            new Integer(1), // min
-            new Integer(400), // max
-            new Integer(1) // step
+            Integer.valueOf(1), // value
+            Integer.valueOf(1), // min
+            Integer.valueOf(400), // max
+            Integer.valueOf(1) // step
     );
     SpinnerNumberModel numberOfDepartments = new SpinnerNumberModel(
-            new Integer(1), // value
-            new Integer(1), // min
-            new Integer(400), // max
-            new Integer(1) // step
+            Integer.valueOf(1), // value
+            Integer.valueOf(1), // min
+            Integer.valueOf(400), // max
+            Integer.valueOf(1) // step
     );
     public static ArrayList<String> usernames = new ArrayList<>();
     public static ArrayList<String> passwords = new ArrayList<>();
 
 
-    private Container c = getContentPane();
-    private JLabel title;
+    private final JTextField tname;
 
-    private JLabel name;
-    private JTextField tname;
+    private final JTextField tmail;
 
-    private JLabel mail;
-    private JTextField tmail;
+    private final JTextField tarea;
 
-    private JLabel area;
-    private JTextField tarea;
+    private final JSpinner numOfPeople;
 
-    private JSpinner numOfPeople;
-    private JLabel tnumOfPeople;
+    private final JLabel username;
+    private final JTextField tusername;
 
-    private JSpinner numOfD;
-    private JLabel tnumOfD;
+    private final JPasswordField tpassword;
 
-    private JLabel username;
-    private JTextField tusername;
-
-    private JLabel password;
-    private JPasswordField tpassword;
-
-    private JLabel rpassword;
-    private JPasswordField trpassword;
+    private final JPasswordField trpassword;
 
 
-    private JCheckBox term;
-    private JCheckBox enclosed;
-    private JButton submit;
-    private JButton reset;
+    private final JCheckBox term;
+    private final JButton submit;
+    private final JButton reset;
 
 
     // constructor, to initialize the components
@@ -70,15 +57,16 @@ public class RegistrationFormL
 
         setLayout(new BorderLayout());
         JLabel background = new JLabel(new ImageIcon("D:\\BooleanShipProjectJ\\CovidApp\\src\\covid\\app\\gui\\bool\\ship\\covidReg3.png"));
+        Container c = getContentPane();
         c.add(background);
 
-        title = new JLabel("Labor User Registration Form");
+        JLabel title = new JLabel("Labor User Registration Form");
         title.setFont(new Font("Arial", Font.BOLD, 30));
         title.setSize(650, 50);
         title.setLocation(200, 30);
         background.add(title);
 
-        name = new JLabel("Organisation Name");
+        JLabel name = new JLabel("Organisation Name");
         name.setFont(new Font("Arial", Font.BOLD, 20));
         name.setSize(200, 20);
         name.setLocation(20, 100);
@@ -90,20 +78,20 @@ public class RegistrationFormL
         tname.setLocation(200, 100);
         background.add(tname);
 
-        numOfD = new JSpinner(numberOfDepartments);
+        JSpinner numOfD = new JSpinner(numberOfDepartments);
         numOfD.setFont(new Font("Arial", Font.BOLD, 20));
         numOfD.setSize(30, 20);
         numOfD.setLocation(600, 100);
         background.add(numOfD);
 
-        tnumOfD = new JLabel("Number of Departments");
+        JLabel tnumOfD = new JLabel("Number of Departments");
         tnumOfD.setFont(new Font("Arial", Font.BOLD, 15));
         tnumOfD.setSize(350, 20);
         tnumOfD.setLocation(420, 100);
         background.add(tnumOfD);
 
 
-        mail = new JLabel("Organisations Email");//have to include the email validation
+        JLabel mail = new JLabel("Organisations Email");//have to include the email validation
         mail.setFont(new Font("Arial", Font.BOLD, 20));
         mail.setSize(350, 20);
         mail.setLocation(5, 150);
@@ -128,7 +116,7 @@ public class RegistrationFormL
         background.add(tusername);
 
 
-        area = new JLabel("Headquarters Area");
+        JLabel area = new JLabel("Headquarters Area");
         area.setFont(new Font("Arial", Font.BOLD, 20));
         area.setSize(200, 20);
         area.setLocation(22, 200);
@@ -140,7 +128,7 @@ public class RegistrationFormL
         tarea.setLocation(200, 200);
         background.add(tarea);
 
-        password = new JLabel("Set Password");
+        JLabel password = new JLabel("Set Password");
         password.setFont(new Font("Arial", Font.BOLD, 20));
         password.setSize(300, 20);
         password.setLocation(460, 200);
@@ -158,13 +146,13 @@ public class RegistrationFormL
         numOfPeople.setLocation(225, 250);
         background.add(numOfPeople);
 
-        tnumOfPeople = new JLabel("Number of Employees");
+        JLabel tnumOfPeople = new JLabel("Number of Employees");
         tnumOfPeople.setFont(new Font("Arial", Font.BOLD, 20));
         tnumOfPeople.setSize(300, 20);
         tnumOfPeople.setLocation(15, 250);
         background.add(tnumOfPeople);
 
-        rpassword = new JLabel("Repeat Password");
+        JLabel rpassword = new JLabel("Repeat Password");
         rpassword.setFont(new Font("Arial", Font.BOLD, 20));
         rpassword.setSize(300, 20);
         rpassword.setLocation(427, 250);
@@ -238,7 +226,7 @@ public class RegistrationFormL
             String orgName = tname.getText();
             String orgMail = tmail.getText();
             String orgArea = tarea.getText();
-            int numDepartment = (int) numberOfDepartments.getValue();
+            //int numDepartment = (int) numberOfDepartments.getValue();
             int numEmployees = (int) numOfPeople.getValue();
             String username = tusername.getText();
             String password = tpassword.getText();
@@ -256,20 +244,18 @@ public class RegistrationFormL
                 JOptionPane.showMessageDialog(null, "This section can not be empty", "Organisation Area", JOptionPane.ERROR_MESSAGE);
             } else if (password.equals("")) {
                 JOptionPane.showMessageDialog(null, "This section can not be empty", "Password", JOptionPane.ERROR_MESSAGE);
-            } else if (rpassword.equals("")) {
-                JOptionPane.showMessageDialog(null, "This section can not be empty", "Repeat Password", JOptionPane.ERROR_MESSAGE);
-            } else if (rpassword.equals("")) {
-                JOptionPane.showMessageDialog(null, "This section can not be empty", "Organisation Username", JOptionPane.ERROR_MESSAGE);
-            } else if (username.equals("")) {
+            }   else if (username.equals("")) {
                 JOptionPane.showMessageDialog(null, "This section can not be empty", "Organisation Username", JOptionPane.ERROR_MESSAGE);
             } else if (rpassword.length() < 6) {
                 JOptionPane.showMessageDialog(null, "Password should contain more than 6 characters", "Weak Password", JOptionPane.ERROR_MESSAGE);
-            }else if(!GuiClass.isValidEmail(orgMail)){
+            } else if (!GuiClass.isValidEmail(orgMail)) {
                 tmail.setText("");
             } else {
                 usernames.add(username);
                 passwords.add(password);
+
                 Labors newOne = new Labors(orgName, orgArea, numEmployees, orgMail);
+                GuiClass.registrationAutomatedMail(orgMail);
                 ok = true;
             }
             if (ok) {
@@ -286,25 +272,11 @@ public class RegistrationFormL
             username.setText(def);
             numOfPeople.setValue(1);
             numberOfDepartments.setValue(1);
-            enclosed.setSelected(false);
+
             term.setSelected(false);
 
         }
 
     }
 }
-//if we want to show the username or whatever we use
-//Statement st1 = Main.connection.createStatement();
-            /*String query1 ="SELECT * FROM Org";
-            try {
-				Statement st = Main.connection.createStatement();
-				ResultSet rs = st.executeQuery(query1);
-				Human human;
-				human = new human(rs.getString(orgName));
-				and continue with the same way to get what you want
 
-			} catch (SQLException e1) {
-
-				e1.printStackTrace();
-			}
-            */
